unpackaged/main/default/objects/asp04__Authorisation__c/asp04__Authorisation__c.object-meta.xml
<CustomObject>
    <label>Authorisation</label>
    <nameField>
        <displayFormat>AUTH-{000000000}</displayFormat>
        <label>Authorisation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>