unpackaged/main/default/objects/asp04__Authorisation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Authorisations</relationshipLabel>
    <relationshipName>Authorisations</relationshipName>
    <type>Lookup</type>
</CustomField>