unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>asp04__Account_Reference__c</fullName>
    <inlineHelpText>Reference to the bank account or card used for the payment</inlineHelpText>
    <label>Account Reference</label>
    <length>250</length>
    <type>Text</type>
</CustomField>