unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Asperato_Repeat_Token__c.field-meta.xml
<CustomField>
    <fullName>asp04__Asperato_Repeat_Token__c</fullName>
    <inlineHelpText>A unique token string to the authorisation generated by Asperato</inlineHelpText>
    <label>Asperato Repeat Token</label>
    <length>250</length>
    <type>Text</type>
</CustomField>