unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Billing_Address_City__c.field-meta.xml
<CustomField>
    <fullName>asp04__Billing_Address_City__c</fullName>
    <inlineHelpText>For individual payments: use individual billing address city.
For company payments: use the company billing address city</inlineHelpText>
    <label>Billing Address City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>