unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Billing_Address_State__c.field-meta.xml
<CustomField>
    <fullName>asp04__Billing_Address_State__c</fullName>
    <inlineHelpText>For individual payments: use individual billing address state.
For company payments: use the company billing address state</inlineHelpText>
    <label>Billing Address State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>