unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Cancel_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>asp04__Cancel_Endpoint__c</fullName>
    <inlineHelpText>Endpoint to use when a cancel is requested from a transaction
The field is deprecated - use the &#39;long&#39; version instead</inlineHelpText>
    <label>Cancel Endpoint (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>