unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__CPA_Granted__c.field-meta.xml
<CustomField>
    <fullName>asp04__CPA_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked indicates that the recurring payment have been authorised</inlineHelpText>
    <label>CPA Granted</label>
    <type>Checkbox</type>
</CustomField>