unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Direct_Debit_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>asp04__Direct_Debit_Error_Code__c</fullName>
    <inlineHelpText>In the event of a Direct Debit failure this will show the detailed error code that was sent from either BACS or SEPA indicating the reason for failure.</inlineHelpText>
    <label>Direct Debit Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>