unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__eCommerce_URL__c.field-meta.xml
<CustomField>
    <fullName>asp04__eCommerce_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://&quot; + $Setup.asp04__AsperatoOneSettings__c.asp04__Server_URL__c + &quot;/PMWeb1?pmRef=&quot; + asp04__Customer_ID__c + &quot;&amp;aid=&quot; + Id, &quot;https://&quot; + $Setup.asp04__AsperatoOneSettings__c.asp04__Server_URL__c + &quot;/PMWeb1?pmRef=&quot; + asp04__Customer_ID__c + &quot;&amp;aid=&quot; + Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eCommerce URL</label>
    <type>Text</type>
</CustomField>