unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>asp04__Error_Code__c</fullName>
    <inlineHelpText>An error code relating to an Authorisation failure.  Refer to the Asperato ONE documentation for a list of the values.</inlineHelpText>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>