unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>asp04__Expiry_Date__c</fullName>
    <inlineHelpText>The date on which the payment authorisation will expire.  A blank date indicates &#39;never&#39;.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>