unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Fail_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>asp04__Fail_Endpoint__c</fullName>
    <inlineHelpText>Endpoint to use when a transaction fails
This field is deprecated - use the &#39;long&#39; version instead</inlineHelpText>
    <label>Fail Endpoint (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>