unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>asp04__Last_Name__c</fullName>
    <inlineHelpText>The customer&#39;slast name. This data will be inserted into the authorisation</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>