unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Mandate_Reference__c.field-meta.xml
<CustomField>
    <fullName>asp04__Mandate_Reference__c</fullName>
    <inlineHelpText>A mandate reference that can be in communication with the customer</inlineHelpText>
    <label>Mandate Reference</label>
    <length>250</length>
    <type>Text</type>
</CustomField>