unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Merchant_Group__c.field-meta.xml
<CustomField>
    <fullName>asp04__Merchant_Group__c</fullName>
    <label>Merchant Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>