unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Payment_Route_Options__c.field-meta.xml
<CustomField>
    <fullName>asp04__Payment_Route_Options__c</fullName>
    <inlineHelpText>A list of payment routes that could be used for this payment. The routes shown here will be reflected in the options shown on the payment page.</inlineHelpText>
    <label>Payment Route Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>asp04__Payment_Route_Options</valueSetName>
    </valueSet>
</CustomField>