unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__PSP_Repeat_Token__c.field-meta.xml
<CustomField>
    <fullName>asp04__PSP_Repeat_Token__c</fullName>
    <inlineHelpText>A unique token string to the authorisation generated by the payment service provider</inlineHelpText>
    <label>Payment Service Provider Repeat Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>