unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Status__c.field-meta.xml
<CustomField>
    <fullName>asp04__Status__c</fullName>
    <inlineHelpText>The current state of the Authorisation</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting submission</fullName>
                <default>true</default>
                <label>Awaiting submission</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Force</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>