unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Status_Description__c.field-meta.xml
<CustomField>
    <fullName>asp04__Status_Description__c</fullName>
    <inlineHelpText>Information relating the current status of the Authorisation</inlineHelpText>
    <label>Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>