unpackaged/main/default/objects/asp04__Authorisation__c/fields/asp04__Success_Endpoint_Long__c.field-meta.xml
<CustomField>
    <fullName>asp04__Success_Endpoint_Long__c</fullName>
    <inlineHelpText>Endpoint to use where the transaction is successful</inlineHelpText>
    <label>Success Endpoint</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>