unpackaged/main/default/objects/asp04__Authorisation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Authorisations</relationshipLabel>
    <relationshipName>Authorisations</relationshipName>
    <type>Lookup</type>
</CustomField>