unpackaged/main/default/objects/asp04__Authorisation__c/listViews/asp04__All.listView-meta.xml
<ListView>
    <fullName>asp04__All</fullName>
    <columns>NAME</columns>
    <columns>asp04__Status__c</columns>
    <columns>asp04__Payment_Route_Selected__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>